<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimaryLight"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:textColor="@color/colorPureWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="end|center_horizontal"
                android:text="@string/rank_name"
                android:textSize="16sp" />

            <TextView
                android:textColor="@color/colorPureWhite"
                android:id="@+id/tv_rank_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:textColor="@color/colorPureWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="end|center_horizontal"
                android:text="@string/rank"
                android:textSize="14sp" />

            <TextView
                android:textColor="@color/colorPureWhite"
                android:id="@+id/tv_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:textColor="@color/colorPureWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="end|center_horizontal"
                android:text="@string/rank_questions_num"
                android:textSize="14sp" />

            <TextView
                android:textColor="@color/colorPureWhite"
                android:id="@+id/tv_message_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>